plugins {
	id 'java'
	id 'org.springframework.boot' version '3.0.0'
	id 'io.spring.dependency-management' version '1.1.0'
}

group = 'com.voidhub'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

jar {
	enabled = false
}

repositories {
	mavenCentral()
}

dependencies {
	implementation("io.jsonwebtoken:jjwt-api:0.11.5")
	runtimeOnly("io.jsonwebtoken:jjwt-impl:0.11.5")
	runtimeOnly('io.jsonwebtoken:jjwt-jackson:0.11.5')
	implementation('org.springframework.boot:spring-boot-starter-validation')
	implementation "org.springframework.boot:spring-boot-starter-thymeleaf"
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'org.postgresql:postgresql'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testImplementation group: 'com.h2database', name: 'h2', version: '1.3.148'
	testImplementation 'io.rest-assured:rest-assured:5.3.0'
	testImplementation group: 'org.hamcrest', name: 'hamcrest', version: '2.1'
}

tasks.named('test') {
	useJUnitPlatform()
}
